# strformat_test

./: .gitignore  CMakeLists.txt  README.md  gen_macos  gen_win32.cmd  gen_win64.cmd  main.cpp
lib/win32/debug/: fastformat.0.core.vc14.dll.debug.lib  fmt.lib
lib/win32/release/: benchmark.lib  fastformat.0.core.vc14.dll.lib  fmt.lib
lib/win64/debug/: fastformat.0.core.vc14.x64.dll.debug.lib  fmt.lib
lib/win64/release/: benchmark.lib  fastformat.0.core.vc14.x64.dll.lib  fmt.lib
